--- a/unimatch/unimatch_website/templates/base.html
+++ b/unimatch/unimatch_website/templates/base.html
@@ -28,7 +28,7 @@
   <div class="container-search"> <!--  style="background-color: #FDFDFD; margin-top:3em; border-radius:3em; padding: 3em" -->
       <h4> <!--  style="text-align:center;padding-bottom: 2em; font-family:'Roboto'" -->
 
-          I want to pursue a
+          I would like to pursue a
 
             <span class="inline-dropdown">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLinkDegree" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -36,10 +36,12 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkDegree">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Bachelor's of Arts</a>
+                    <a class="dropdown-item" href="#">Master's of Science</a>
+                    <a class="dropdown-item" href="#">Ph.D</a>
                 </div>
+
+
 
           </span>
 
@@ -51,9 +53,9 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkCountry">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">United States of America</a>
+                    <a class="dropdown-item" href="#">United Kingdom</a>
+                    <a class="dropdown-item" href="#">South Korea</a>
                 </div>
 
           </span>
@@ -64,9 +66,9 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkCity">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Boston, MA</a>
+                    <a class="dropdown-item" href="#">Seoul, South Korea</a>
+                    <a class="dropdown-item" href="#">London, United Kingdom</a>
                 </div>
 
           </span>
@@ -81,9 +83,9 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkCurrency">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Euro</a>
+                    <a class="dropdown-item" href="#">Frank</a>
+                    <a class="dropdown-item" href="#">Won</a>
                 </div>
 
           </span>
@@ -95,9 +97,9 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkValue">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">50,000</a>
+                    <a class="dropdown-item" href="#">75,000</a>
+                    <a class="dropdown-item" href="#">100,000</a>
                 </div>
 
           </span>
@@ -108,15 +110,17 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkUnit">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Cost per semester</a>
+                    <a class="dropdown-item" href="#">Cost for program</a>
+                    <a class="dropdown-item" href="#">Cost per year</a>
                 </div>
 
           </span>
+
+          .
       </h4>
 
-      <h4> <!--  style="text-align:center;padding-bottom: 2em; font-family:'Roboto'" -->
+      <h4>
           I am interested in
 
           <span class="inline-dropdown">
@@ -131,32 +135,35 @@
                 </div>
 
           </span>
-
+          .
       </h4>
 
-      <h4 style="text-align:center; margin-top: 2em; font-family:'Roboto';">
-        Or enter a more specific phrase:
+      <br>
+
+      <h4>
+        <b>Or enter a more specific phrase:</b>
       </h4>
 
-      <input type="text" class="form-control" id="exampleInputPassword1" placeholder="&ldquo;Social Justice with emphasis on Black History&rdquo;">
+      <div class="form-group">
+          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="&ldquo;Social Justice with emphasis on Black History&rdquo;" rows="10"></textarea>
+      </div>
 
-        <div class="text-center">
-            <input class="btn btn-primary" style="text-align:center; margin-top:2em" type="submit" value="Submit">
-        </div>
+      <div class="text-center">
+        <input class="btn btn-primary shadow-none" style="text-align:center; margin-top:2em" type="submit" value="Submit">
+      </div>
 
   </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
+     </body>
 </html>
 
 
