--- a/unimatch/unimatch_website/templates/base.html
+++ b/unimatch/unimatch_website/templates/base.html
@@ -145,11 +145,16 @@
       </h4>
 
       <div class="form-group">
-          <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="&ldquo;Social Justice with emphasis on Black History&rdquo;" rows="10"></textarea>
+          <textarea class="form-control shadow-none" id="phraseFormControlTextarea1" placeholder="&ldquo;Social Justice with emphasis on Black History&rdquo;" rows="10"></textarea>
+          <style>
+              #phraseFormControlTextarea1:focus {
+                 border-color: black;
+              }
+          </style>
       </div>
 
       <div class="text-center">
-        <input class="btn btn-primary shadow-none" style="text-align:center; margin-top:2em" type="submit" value="Submit">
+        <input class="btn btn-primary shadow-none" type="submit" value="Submit">
       </div>
 
   </div>
